// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userArticleLink [model] createOrUpdateByUserIdAndArticleId() (upsert) 1`] = `
Object {
  "articleId": "articleId-3",
  "createdAt": 1989-06-04T00:00:00.000Z,
  "lastViewedAt": 1989-06-04T00:01:00.000Z,
  "userId": "userId-3",
}
`;

exports[`userArticleLink [model] createOrUpdateByUserIdAndArticleId() 1`] = `
Object {
  "articleId": "articleId-2",
  "createdAt": 1989-06-04T00:00:00.000Z,
  "lastViewedAt": 1989-06-04T00:01:00.000Z,
  "userId": "userId-2",
}
`;

exports[`userArticleLink [model] findByArticleIds() 1`] = `
Array [
  Object {
    "articleId": "a2",
    "createdAt": 2020-01-01T23:10:18.314Z,
    "lastViewedAt": 1989-06-04T00:00:00.000Z,
    "userId": "userId-2",
  },
  Object {
    "articleId": "a2",
    "createdAt": 2020-01-01T19:10:18.314Z,
    "lastViewedAt": 1989-06-04T00:00:00.000Z,
    "userId": "userId-1",
  },
  Object {
    "articleId": "a1",
    "createdAt": 2020-01-01T18:10:18.314Z,
    "lastViewedAt": 1989-06-04T00:00:00.000Z,
    "userId": "userId-2",
  },
]
`;

exports[`userArticleLink [model] should create a document 1`] = `
Object {
  "articleId": "this_is_article_id",
  "createdAt": 1989-06-04T00:00:00.000Z,
  "lastViewedAt": 1989-06-04T00:00:00.000Z,
  "userId": "this_is_user_id",
}
`;

exports[`userArticleLink [model] should fail to create a document 1`] = `
"[
  {
    \\"keyword\\": \\"required\\",
    \\"dataPath\\": \\"\\",
    \\"schemaPath\\": \\"#/required\\",
    \\"params\\": {
      \\"missingProperty\\": \\"userId\\"
    },
    \\"message\\": \\"should have required property 'userId'\\"
  }
]"
`;

exports[`userArticleLink [schema] should fail with wrong type of createdAt 1`] = `
Object {
  "errors": Array [
    Object {
      "dataPath": ".createdAt",
      "keyword": "instanceOf",
      "message": "should pass \\"instanceOf\\" keyword validation",
      "params": Object {
        "keyword": "instanceOf",
      },
      "schemaPath": "#/properties/createdAt/instanceOf",
    },
  ],
  "valid": false,
}
`;

exports[`userArticleLink [schema] should pass 1`] = `
Object {
  "errors": null,
  "valid": true,
}
`;
